--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 *{/*margin: 0;padding: 0;*/font-family: 'Varela Round', sans-serif;}
 body{background: linear-gradient(to right, rgba(73,155,234,1) 0%, rgba(32,124,229,1) 100%);}
-#title{text-align: center;color: #fff;}
+#title{text-align: center;color: #fff;letter-spacing: 3px;}
 .center{margin: 0 auto;}
+.biggerfont{font-size: 18px;}
+#url{background-color: transparent;outline: none;border: none; border-bottom: 5px solid white;color: #fff;width: 60%;}
+#chg{background-color: transparent;outline:none;border:none;border-bottom: 5px solid white;color:#ccc;width: 10%}
+#url:hover{}
+#chg:hover{color:#fff;}
+::placeholder{color:#ccc;}
